--- a/01-ping.yaml
+++ b/01-ping.yaml
@@ -3,6 +3,7 @@
 
 - name: ping the response
   host: web
+  become: yes
   tasks: # list of tasks/modules/collections
   - name: pining the server 
     ansible.builtin.ping:
