--- a/02-nginx.yaml
+++ b/02-nginx.yaml
@@ -9,5 +9,5 @@
   - name: starting the nginx server
     ansible.builtin.service:
       name: nginx
-      state: started
-      enabled: yes
+      state: stopped
+      #enabled: yes
