--- a/02-nginx.yaml
+++ b/02-nginx.yaml
@@ -9,5 +9,6 @@
   - name: starting the nginx server
     ansible.builtin.service:
       name: nginx
-      state: stopped
-      #enabled: yes
+      state: started
+      enabled: yes
+      
