--- a/07-var-promt.yaml
+++ b/07-var-promt.yaml
@@ -10,4 +10,4 @@
   tasks: 
   - name: printing variables
     ansible.builtin.debug:
-     msg: "my name is {{USERNAME}}, i am working as a {{PASSWORD}}"
+     msg: "my username is ::  {{USERNAME}}, my password is :: {{PASSWORD}}"
