--- a/inventory.ini
+++ b/inventory.ini
@@ -1,8 +1,8 @@
 54.173.90.13
 
 [localhost:vars]
-person="sid"
-job="graphi designer"
+person="Kithu"
+job=Graphic Designer
 
 [localhost]
 54.227.86.83
