--- a/inventory.ini
+++ b/inventory.ini
@@ -1,8 +1,20 @@
 54.173.90.13
 
+; [localhost:vars]
+; person = Sid
+; job = Graphic 
+
+
+; [localhost:vars]
+; person ="Sid"
+; job ="Graphic Designer"
+
+
 [localhost:vars]
-person = Sid
-job = Graphic 
+person=Sid
+job=Graphic 
+
+
 
 [localhost]
 54.227.86.83
