--- a/15-filters.yaml
+++ b/15-filters.yaml
@@ -6,9 +6,9 @@
     prompt: plese enter your number
     private: false
   vars:
-  - name: kithu
-    job: graphic designer
+  - name: "kithu"
+  - job: "graphic designer"
   tasks:
   - name: variables printing lower to upper case
     ansible.builtin.debug:
-      msg: "{{name | upper  and job | upper }}"
+      msg: "{{name | upper }} and {{ job | upper }}"
