--- a/15-filters.yaml
+++ b/15-filters.yaml
@@ -77,3 +77,14 @@
   - name: after converting list to map
     ansible.builtin.debug:
       msg: "After converting list to map : {{ person_info | items2dict }}"  ### items2dict
+
+
+- name: printing min and max numbers
+  hosts: localhost
+  become: yes
+  vars:
+  - list_of_numbers: [ 10,3,7,89,12,37,95,425,998,3478,9345 ]
+  tasks:
+  - name: printing max and min 
+    anisble.builtin.debug:
+      msg: "{{ list_of_numbers | min }}  and {{ list_of_numbers | max }}"
