--- a/18-loop-installtion.yaml
+++ b/18-loop-installtion.yaml
@@ -4,10 +4,10 @@
   tasks:
   - name: installing and removing based on the preference
     ansible.builtin.dnf:
-      name: {{ item.name }}
+      name: {{ item.name }} ## item 
       state: {{ item.state }}
     loop:
-    - { name: nginx,  state: present }
+    - { name: nginx,  state: latest }
     - { name: postfix, state: absent }
     - { name: mysql, state: absent }
 
